--- a/src/vigilo/themes/i18n/de_DE/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/de_DE/LC_MESSAGES/vigilo-themes.po
@@ -1022,3 +1022,157 @@ msgstr "kein Bild"
 #~ msgid "Loading VigiGraph..."
 #~ msgstr " VigiGraph wird geladen..."
 
+#: source/class/vigigraph/Application.js:90
+msgid "Host Picker"
+msgstr "Hostauswahl"
+
+#: source/class/vigigraph/Application.js:118
+msgid "Main Group"
+msgstr "Hauptgruppe"
+
+#: source/class/vigigraph/Application.js:119
+msgid "Host Group"
+msgstr "Hostgruppe"
+
+#: source/class/vigigraph/Application.js:120
+msgid "Host Name"
+msgstr "Hostname"
+
+#: source/class/vigigraph/Application.js:121
+msgid "Graph Group"
+msgstr "Grafikgruppe"
+
+#: source/class/vigigraph/Application.js:122
+msgid "Graph Name"
+msgstr "Grafikname"
+
+#: source/class/vigigraph/Application.js:131
+#: source/class/vigigraph/Application.js:133
+#: source/class/vigigraph/Application.js:135
+#: source/class/vigigraph/Application.js:137
+#: source/class/vigigraph/Application.js:139
+msgid "Refresh"
+msgstr "Aktualisieren"
+
+#: source/class/vigigraph/Application.js:142
+#: source/class/vigigraph/Application.js:235
+msgid "Search"
+msgstr "Suchen"
+
+#: source/class/vigigraph/Application.js:144
+msgid "Show Nagios page"
+msgstr "Nagios-Seite anzeigen"
+
+#: source/class/vigigraph/Application.js:147
+msgid "Show graph"
+msgstr "Grafik anzeigen"
+
+#: source/class/vigigraph/Application.js:252
+msgid "Host:"
+msgstr "Host:"
+
+#: source/class/vigigraph/Application.js:258
+msgid "Search for a host (\"*\" for all, 100 max)"
+msgstr "Host suchen (\"*\" for all, 100 max)"
+
+#: source/class/vigigraph/Application.js:259
+msgid "Graph:"
+msgstr "Grafik:"
+
+#: source/class/vigigraph/Application.js:265
+msgid "Search for a graph (\"*\" for all, 100 max)"
+msgstr "Grafik suchen (\"*\" for all, 100 max)"
+
+#: source/class/vigigraph/Application.js:271
+msgid "Graph"
+msgstr "Grafik"
+
+#: source/class/vigigraph/Application.js:271
+msgid "Host"
+msgstr "Host"
+
+#: source/class/vigigraph/Application.js:605
+msgid "Graph for \"%1\" on \"%2\""
+msgstr "Grafik für \"%1\" auf \"%2\""
+
+#: source/class/vigigraph/Application.js:611
+msgid "Reload graph"
+msgstr "Grafik erneut laden"
+
+#: source/class/vigigraph/Application.js:616
+msgid "Last 12 hours"
+msgstr "Letzte 12 Stunden"
+
+#: source/class/vigigraph/Application.js:617
+msgid "Last 24 hours"
+msgstr "Letzte 24 Stunden"
+
+#: source/class/vigigraph/Application.js:618
+msgid "Last 48 hours"
+msgstr "Letzte 48 Stunden"
+
+#: source/class/vigigraph/Application.js:619
+msgid "Last 7 days"
+msgstr "Letzte 7 Tage"
+
+#: source/class/vigigraph/Application.js:620
+msgid "Last 14 days"
+msgstr "Letzte 14 Tage"
+
+#: source/class/vigigraph/Application.js:621
+msgid "Last 3 months"
+msgstr "Letzte 3 Monate"
+
+#: source/class/vigigraph/Application.js:622
+msgid "Last 6 months"
+msgstr "Letzte 6 Monate"
+
+#: source/class/vigigraph/Application.js:623
+msgid "Last year"
+msgstr "Letztes Jahr"
+
+#: source/class/vigigraph/Application.js:632
+msgid "Timeframe"
+msgstr "Zeitrahmen"
+
+#: source/class/vigigraph/Application.js:633
+msgid "Timeframe menu"
+msgstr "Zeitrahmen-Menü"
+
+#: source/class/vigigraph/Application.js:636
+msgid "Graph start"
+msgstr "Grafik starten"
+
+#: source/class/vigigraph/Application.js:638
+msgid "Previous section"
+msgstr "Vorheriger Abschnitt"
+
+#: source/class/vigigraph/Application.js:640
+msgid "Next section"
+msgstr "Nächster Abschnitt"
+
+#: source/class/vigigraph/Application.js:642
+msgid "Graph end"
+msgstr "Grafik beenden"
+
+#: source/class/vigigraph/Application.js:644
+msgid "Zoom in"
+msgstr "Vergrößern"
+
+#: source/class/vigigraph/Application.js:646
+msgid "Zoom out"
+msgstr "Verkleinern"
+
+#: source/class/vigigraph/Application.js:648
+msgid "Print Graph"
+msgstr "Grafik drucken"
+
+#: source/class/vigigraph/Application.js:654
+#: source/class/vigigraph/Application.js:655
+msgid "Export CSV"
+msgstr "CSV exportieren"
+
+#: source/class/vigigraph/Application.js:778
+msgid "All"
+msgstr "Alle"
+
