--- a/src/vigilo/themes/i18n/de/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/de/LC_MESSAGES/vigilo-themes.po
@@ -1,4 +1,4 @@
-# German translations for vigilo-themes-default.
+# German (Germany) translations for vigilo-themes-default.
 # Copyright (C) 2010 ORGANIZATION
 # This file is distributed under the same license as the
 # vigilo-themes-default
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: vigilo-themes-default 2.0.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2010-11-19 12:43+0100\n"
-"PO-Revision-Date: 2011-05-14 13:58+0200\n"
+"PO-Revision-Date: 2011-05-14 17:36+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: de <LL@li.org>\n"
+"Language-Team: de_DE <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -21,7 +21,6 @@ msgstr ""
 
 #: src/vigilo/themes/public/common/js/grouptree.js:236
 #, fuzzy
-#| msgid "loading..."
 msgid "Loading..."
 msgstr "wird geladen..."
 
@@ -36,8 +35,9 @@ msgstr ""
 
 #: src/vigilo/themes/public/vigimap/js/search.js:86
 #: src/vigilo/themes/public/vigimap/js/search.js:108
+#, fuzzy
 msgid "Map"
-msgstr "Karte"
+msgstr "Unterkarten"
 
 #: src/vigilo/themes/templates/common/error.html:11
 #, python-format
@@ -226,8 +226,9 @@ msgid "delete"
 msgstr "löschen"
 
 #: src/vigilo/themes/templates/vigiadmin/index.html:19
+#, fuzzy
 msgid "Interfaces"
-msgstr "Schnittstellen"
+msgstr "Vigilo Schnittstellen"
 
 #: src/vigilo/themes/templates/vigiadmin/index.html:23
 #: src/vigilo/themes/templates/vigiadmin/sidebars.html:9
@@ -732,7 +733,6 @@ msgstr "wird geladen..."
 
 #: src/vigilo/themes/templates/vigiboard/plugins/details.html:25
 #, fuzzy
-#| msgid "Error while retrieving data"
 msgid "Error while loading data..."
 msgstr "Fehler beim Abrufen der Daten"
 
@@ -1025,7 +1025,6 @@ msgstr "Verwaltungsseite"
 
 #: src/vigilo/themes/templates/vigimap/node.html:5
 #, fuzzy
-#| msgid "Pages"
 msgid "Tags"
 msgstr "Seiten"
 
@@ -1067,7 +1066,6 @@ msgstr ""
 
 #: src/vigilo/themes/templates/vigimap/admin/mapgroups/confirm_delete.html:15
 #, fuzzy, python-format
-#| msgid "Are you sure you want to delete this downtime?"
 msgid "Are you sure you want to delete %(path)s?"
 msgstr "Sind Sie sicher, dass diese Downtime gelöscht werden soll?"
 
@@ -1076,31 +1074,4 @@ msgstr "Sind Sie sicher, dass diese Downtime gelöscht werden soll?"
 #, python-format
 msgid "Related to %(parent_obj)s"
 msgstr ""
-
-#~ msgid "Search for an host/graph"
-#~ msgstr ""
-
-#~ msgid "Graph"
-#~ msgstr ""
-
-#~ msgid "Search Event"
-#~ msgstr "Ereignis suchen"
-
-#~ msgid "Select a group"
-#~ msgstr "Gruppe auswählen"
-
-#~ msgid "Unable to save preferences"
-#~ msgstr "Einstellungen können nicht gespeichert werden"
-
-#~ msgid "%Y-%m-%d %I:%M:%S %p"
-#~ msgstr "%Y-%m-%d %I:%M:%S %p"
-
-#~ msgid "Search for a host (\"*\" for all, 100 max)"
-#~ msgstr ""
-
-#~ msgid "Graph:"
-#~ msgstr "VigiGraph"
-
-#~ msgid "Search for a graph (\"*\" for all, 100 max)"
-#~ msgstr ""
 
