[#1310] fin de ligne incorrecte dans traduction
Certains fichiers de traduction avaient des fin de lignes incorrectes comme
ceci :
XXXXXXXXXXXXXXXXXXXX\"\n"
"\"

Change-Id: I1b5d4dd6684f1ef20118ace400049f6363841adf
Reviewed-on: https://vigilo-dev.si.c-s.fr/review/1532
Tested-by: Build system <qa@vigilo-dev.si.c-s.fr>
Reviewed-by: Francois POIROTTE <francois.poirotte@c-s.fr>

--- a/src/vigilo/themes/i18n/de/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/de/LC_MESSAGES/vigilo-themes.po
@@ -63,8 +63,7 @@ msgid ""
 "        system and network management."
 msgstr ""
 "Vigilo ist eine Open-Source Überwachungslösung für Großsysteme\n"
-"\"\n"
-"\"        System- und Netzwerk-Management."
+"        System- und Netzwerk-Management."
 
 #: src/vigilo/themes/templates/common/header.html:6
 #: src/vigilo/themes/templates/vigiadmin/index.html:13
