--- a/src/vigilo/themes/i18n/fr/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/fr/LC_MESSAGES/vigilo-themes.po
@@ -8,7 +8,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: vigilo-themes-default 0.1\n"
-"Report-Msgid-Bugs-To: contact@projet-vigilo.org\n"
+"Report-Msgid-Bugs-To: contact.vigilo@c-s.fr\n"
 "POT-Creation-Date: 2009-11-10 09:51+0100\n"
 "PO-Revision-Date: 2015-06-22 16:46+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
