--- a/src/vigilo/themes/i18n/de/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/de/LC_MESSAGES/vigilo-themes.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: vigilo-themes-default 2.0.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2010-11-19 12:43+0100\n"
-"PO-Revision-Date: 2017-08-24 15:10+0200\n"
+"PO-Revision-Date: 2017-08-24 17:42+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: de_DE <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -113,7 +113,7 @@ msgstr ""
 #: src/vigilo/themes/templates/common/admin/get_all.html:6
 #: src/vigilo/themes/templates/common/admin/get_all.html:17
 #, python-format
-msgid "List of %s"
+msgid "Listing objects of type \"%s\""
 msgstr ""
 
 #: src/vigilo/themes/templates/common/admin/get_all.html:19
