--- a/src/vigilo/themes/i18n/en/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/en/LC_MESSAGES/vigilo-themes.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: vigilo-themes-default 4.1.0rc2\n"
 "Report-Msgid-Bugs-To: contact.vigilo@c-s.fr\n"
-"POT-Creation-Date: 2017-08-24 15:10+0200\n"
-"PO-Revision-Date: 2017-08-24 15:10+0200\n"
+"POT-Creation-Date: 2017-08-24 17:42+0200\n"
+"PO-Revision-Date: 2017-08-24 17:42+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: en <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -111,8 +111,8 @@ msgstr "Edit %s"
 #: src/vigilo/themes/templates/common/admin/get_all.html:6
 #: src/vigilo/themes/templates/common/admin/get_all.html:17
 #, python-format
-msgid "List of %s"
-msgstr "List of %s"
+msgid "Listing objects of type \"%s\""
+msgstr "Listing objects of type \"%s\""
 
 #: src/vigilo/themes/templates/common/admin/get_all.html:19
 #: src/vigilo/themes/templates/common/admin/new.html:7
