--- a/src/vigilo/themes/i18n/vigilo-themes.pot
+++ b/src/vigilo/themes/i18n/vigilo-themes.pot
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: vigilo-themes-default 4.1.0rc2\n"
 "Report-Msgid-Bugs-To: contact.vigilo@c-s.fr\n"
-"POT-Creation-Date: 2017-08-24 15:10+0200\n"
+"POT-Creation-Date: 2017-08-24 17:42+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -108,7 +108,7 @@ msgstr ""
 #: src/vigilo/themes/templates/common/admin/get_all.html:6
 #: src/vigilo/themes/templates/common/admin/get_all.html:17
 #, python-format
-msgid "List of %s"
+msgid "Listing objects of type \"%s\""
 msgstr ""
 
 #: src/vigilo/themes/templates/common/admin/get_all.html:19
