--- a/src/vigilo/themes/i18n/fr/LC_MESSAGES/vigilo-themes.po
+++ b/src/vigilo/themes/i18n/fr/LC_MESSAGES/vigilo-themes.po
@@ -8,11 +8,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: vigilo-themes-default 0.1\n"
-"Report-Msgid-Bugs-To: contact.vigilo@c-s.fr\n"
+"Report-Msgid-Bugs-To: support.vigilo@csgroup.eu\n"
 "POT-Creation-Date: 2009-11-10 09:51+0100\n"
 "PO-Revision-Date: 2017-08-24 17:42+0200\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: fr <LL@li.org>\n"
+"Last-Translator: support.vigilo@csgroup.eu\n"
+"Language-Team: fr <support.vigilo@csgroup.eu>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
